Modificacion a mapa dinamico

--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Mapa Satelital T4G</title>
+  <meta charset="UTF-8">
+  <title>Mapa Satelital por Coordenadas</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+e2pkCuVjXU1d3bE0i3MXh4c68S0HHMmk0pIXN3/w="
+    crossorigin=""
+  />
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      margin: 0;
     }
-    img {
-      max-width: 100%;
-      max-height: 100%;
+    #map {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <img src="img/mina-chile1.jpg" alt="Mapa Satelital T4G">
+  <div id="map"></div>
+
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-SmSRN+OVHEoQKJLRKf+U6J86FcT6x4B44Z3Ij2W8J+o="
+    crossorigin=""
+  ></script>
+  <script>
+    // Leer coordenadas desde la URL y si no están presentes, usar valores por defecto
+    // Valores por defecto: Santiago, Chile (lat: -33.4489, lng: -70.6693)
+    const urlParams = new URLSearchParams(window.location.search);
+    const lat = parseFloat(urlParams.get("lat")) || -33.4489;
+    const lng = parseFloat(urlParams.get("lng")) || -70.6693;
+
+    // Crear mapa
+    const map = L.map('map').setView([lat, lng], 13);
+
+    // Capa base (OpenStreetMap) 
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap',
+      maxZoom: 19,
+    }).addTo(map);
+
+    // Marcador
+    L.marker([lat, lng]).addTo(map)
+      .bindPopup(`Ubicación: ${lat.toFixed(4)}, ${lng.toFixed(4)}`)
+      .openPopup();
+  </script>
 </body>
 </html>
