--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,15 @@
     const lng = parseFloat(params.get("lng")) || -70.6693;
 
     const map = L.map("map").setView([lat, lng], 13);
-    // Capa de mapa satelital, busca con coordenadas z,x,y
-    L.tileLayer("https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png", {
-      maxZoom: 17,
-      attribution: "© OpenTopoMap contributors"
-    }).addTo(map);
+    // Capa de mapa satelital, busca con coordenadas z,x,y usando Mapbox para vistas 3d
+    L.tileLayer(
+      "https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v12/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoieGFmeWVzIiwiYSI6ImNtYzN3dGcydjA5cHEybG9mbGY1eTJ6NWoifQ.2E_LntyZjZMOJrufJh9H4Q",
+      {
+        tileSize: 512,
+        zoomOffset: -1,
+        attribution: "© Mapbox © OpenStreetMap"
+      }
+    ).addTo(map);
 
     L.marker([lat, lng]).addTo(map)
       .bindPopup(`Ubicación: ${lat.toFixed(4)}, ${lng.toFixed(4)}`)
